# wsde

./: .gcloudignore  .gitignore  AGENTS.md  LICENSE  Makefile  app-staging.yaml  app.yaml  justfile  manage.py  pyproject.toml
.beads/: issues.jsonl  metadata.json
.beads/hooks/: post-checkout
.githooks/: pre-commit
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml
scripts/: gcp_setup.sh
src/core/: secrets.py  urls.py
src/core/settings/: base.py  dev.py  local.py.tpl  production.py  staging.py
src/core/templates/: base.html
src/core/tests/: test_secrets.py
src/pages/: admin.py  factories.py  models.py
src/pages/management/commands/: drop_all_tables.py  ensure_homepage.py
src/pages/migrations/: 0001_initial.py  0002_alter_homepage_body.py
src/pages/services/: data.py
src/pages/templates/pages/: home_page.html
src/pages/templates/pages/blocks/: full_bleed_image.html  hero.html  pull_quote.html  two_column.html
src/pages/tests/: conftest.py  test_data.py  test_logic.py
src/styles/: input.css
